--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ __pycache__/
 *.swo
 *~
 *.dSYM/
+data/*_train.label
+data/*_test.label
+data/*_train.out
+data/*_test.out
 
 # GNUmakefile deps
 src/.deps/*
