first steps toward nips submission

--- a/paper/Makefile
+++ b/paper/Makefile
@@ -1,4 +1,4 @@
-TARGETS = arxiv kdd17
+TARGETS = arxiv kdd17 nips_2017
 
 TEXFILES = $(wildcard *.tex sections/*.tex)
 BIBFILES = $(wildcard *.bib)
@@ -16,6 +16,8 @@ all: $(PDFS)
 a: arxiv.pdf
 
 k: kdd17.pdf
+
+n: nips_2017.pdf
 
 spell:
 	$(shell for i in $(TEXFILES); do ispell $(i); done)
