Turn off KDD target in paper Makefile

--- a/paper/Makefile
+++ b/paper/Makefile
@@ -1,4 +1,4 @@
-TARGETS = arxiv kdd17 #nips_2017
+TARGETS = arxiv #kdd17 #nips_2017
 
 TEXFILES = $(wildcard *.tex sections/*.tex)
 BIBFILES = $(wildcard *.bib)
@@ -15,7 +15,7 @@ all: $(PDFS)
 
 a: arxiv.pdf
 
-k: kdd17.pdf
+#k: kdd17.pdf
 
 #n: nips_2017.pdf
 
