Fixed compile errors by removing macOS specific LDFLAGS, fixed floating point error by setting default NullLogger frequency value to 1000

--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -10,7 +10,7 @@ endif
 LIBS += -L/usr/local/lib -lgmpxx -lgmp
 
 ifneq ($(shell uname -n),beepboop)
-    LDFLAGS := -Wl,-no_pie
+    LDFLAGS :=
     CFLAGS += -fno-omit-frame-pointer
     ifneq ($(shell uname -r),15.6.0)
         LIBS += -lprofiler -ltcmalloc
@@ -68,3 +68,4 @@ endif
 
 .PHONY: all clean
 .SUFFIXES:
+
