--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -34,15 +34,9 @@ DEPSDIR := .deps
 
 CLEAN = corels *~ *.o *.so
 
-all: corels tests
+all: corels
 
 corels: main.o corels.o pmap.o cache.o rulelib.o utils.o
-	$(CXX) $(CFLAGS) $^ -o $@ $(LDFLAGS) $(LIBS)
-
-evaluate-test: evaluate-test.o evaluate.o corels.o pmap.o cache.o rulelib.o utils.o
-	$(CXX) $(CFLAGS) $^ -o $@ $(LDFLAGS) $(LIBS)
-
-tests: pmap.o corels.o cache.o rulelib.o utils.o $(TESTSDIR)/tests.o $(TESTSDIR)/tests-main.o
 	$(CXX) $(CFLAGS) $^ -o $@ $(LDFLAGS) $(LIBS)
 
 main.o: main.cc $(DEPSDIR)/stamp
@@ -62,12 +56,6 @@ cache.o: cache.cc $(DEPSDIR)/stamp
 
 rulelib.o: rulelib.c $(DEPSDIR)/stamp
 	$(CC) $(CFLAGS) $(DEPCFLAGS) -c $< -o $@
-
-evaluate-test.o: evaluate-test.cc $(DEPSDIR)/stamp
-	$(CXX) $(CFLAGS) $(DEPCFLAGS) -c $< -o $@
-
-evaluate.o: evaluate.cc $(DEPSDIR)/stamp
-	$(CXX) $(CFLAGS) $(DEPCFLAGS) -c $< -o $@
 
 $(DEPSDIR)/stamp:
 	mkdir -p $(dir $@)
