--- a/src/GNUmakefile
+++ b/src/GNUmakefile
@@ -35,7 +35,7 @@ all: corels libcorels.so evaluate-test
 corels: cli.o params.o run.o corels.o pmap.o cache.o rulelib.o utils.o
 	$(CXX) $(CFLAGS) $^ -o $@ $(LDFLAGS) $(LIBS)
 
-libcorels.so: run.o params.o corels.o pmap.o cache.o rulelib.o utils.o
+libcorels.so: run.o params.o corels.o pmap.o cache.o rulelib.o utils.o evaluate.o
 	$(CXX) -shared  -Wl,-soname,$@ -o $@ $^
 
 libcorels.a: run.o params.o corels.o pmap.o cache.o rulelib.o utils.o
